--- a/config/database.yml
+++ b/config/database.yml
@@ -14,6 +14,7 @@ test:
 production:
   <<: *default
   database: abujani
-  password: mayhem
+  username: mayhem
+  password: <%= ENV['RAILS_SOKO_PASSWORD'] %>
 
 
